--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 }
 
 h1 {
-    margin-top: 2em;
-    font-size: 50px;
+    margin-top: 30px;
+    font-size: 70px;
     color: #403224;
     
 }
@@ -21,7 +21,17 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 100px;
-    margin-top: 50px;
+    margin-top: 30px;
+}
+
+.icon:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: all .3s;
+}
+
+.icon:hover .text {
+    color: darkred;
 }
 
 img {
@@ -33,7 +43,7 @@ img {
 }
 
 .text {
-    margin-top: 10px;
+    margin-top: 5px;
     font-size: 50px;
     font-weight: 600;
     color: #403224;
