--- a/style.css
+++ b/style.css
@@ -113,4 +113,44 @@ img {
 }
 
 
+.overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(239, 221, 209, 0.75);
+    z-index: 2;
+}
+
+.modal {
+    align-items: center;
+    position: relative;
+    top: 20%;
+    background-color: #F9B872;
+    border-radius: 10px;
+    border: 5px solid #5b4f48;
+    width: 500px;
+    margin: auto;
+    height: auto;
+    font-size: 30px;
+    padding: 20px 0px;
+}
+
+.play-again {
+    margin-top: 10px;
+    color: #5b4f48;
+    background-color: #F2BF88;
+    border: 3px solid #332d26;
+    border-radius: 5px;
+    font-size: 30px;
+    padding: 0.5em;
+}
+
+.play-again:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: all .3s;
+}
 
